Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  error;              //Valid in all versions
	USHORT  cwd1;               //Valid in all versions
	USHORT  cwd2;               //Valid in all versions
	USHORT  swd1;               //Valid in all versions
	USHORT  swd2;               //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[40];           //Variable length (don't exceed data[datacount-1])
} SEQRECORD1553;
typedef SEQRECORD1553 * LPSEQRECORD1553;
typedef struct
{
	ULONG   timestamph;         //Valid if version of base record (SEQRECORD1553) >= 1
	USHORT  resptime1;          //Valid if version of base record (SEQRECORD1553) >= 1
	USHORT  resptime2;          //Valid if version of base record (SEQRECORD1553) >= 1
} SEQRECORDMORE1553;
typedef SEQRECORDMORE1553 * LPSEQRECORDMORE1553;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  decgap;             //Valid if version >= 1
	ULONG   data;               //Valid in all versions
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD429;
typedef SEQRECORD429 * LPSEQRECORD429;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  wordnum;            //Valid in all versions
	USHORT  subframe;           //Valid in all versions
	USHORT  superframe;         //Valid in all versions
	USHORT  data;               //Valid in all versions
	USHORT  rsvd9;              //Valid if version >= 1
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD717;
typedef SEQRECORD717 * LPSEQRECORD717;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[100];          //Valid in all versions
	USHORT  extra[16];          //Valid if version >= 1
	USHORT  bitcount;           //Valid if version >= 1
	USHORT  rsvd123;            //Valid if version >= 1
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD708;
typedef SEQRECORD708 * LPSEQRECORD708;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[32];           //Valid in all versions
} SEQRECORDCSDB;
typedef SEQRECORDCSDB * LPSEQRECORDCSDB;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	USHORT  bank;               //Valid in all versions
	USHORT  state;              //Valid in version 0
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  change;             //Valid in version 1
	USHORT  value;              //Valid in version 1
} SEQRECORDDIO;
typedef SEQRECORDDIO * LPSEQRECORDDIO;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  error;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  cwd;                //Valid in all versions
	USHORT  cwdinfo;            //Valid in all versions
	USHORT  swd;                //Valid in all versions
	USHORT  swdinfo;            //Valid in all versions
	USHORT  resptime;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[40];           //Variable length (don't exceed data[datacount-1])
} SEQRECORDEBR;
typedef SEQRECORDEBR * LPSEQRECORDEBR;
typedef struct
{
	LPUSHORT pRecFirst;
	LPUSHORT pRecNext;
	LPUSHORT pRecLast;
} SEQFINDINFO;
typedef SEQFINDINFO * LPSEQFINDINFO;
BTICardAPI VOID __stdcall BTICard_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_RAMWrW(USHORT value,ULONG addrval,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_ReverseLong(ULONG value);
BTICardAPI USHORT __stdcall BTICard_ReverseWord(USHORT value);
BTICardAPI ULONG __stdcall BTICard_SeqBlkRd(LPUSHORT buf,ULONG bufcount,LPULONG blkcnt,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_SeqBlkRdEx(LPUSHORT buf,ULONG bufcount,ULONG maxblkcnt,LPULONG blkcnt,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SeqClear(HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SeqCommRd(LPUSHORT buf,USHORT bufcount,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SeqConfig(ULONG configval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SeqConfigEx(ULONG configval,ULONG seqcount,USHORT cardnum,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SeqConfigExx(ULONG configval,ULONG seqaddr,ULONG seqcount,USHORT cardnum,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_SeqDMARd(LPUSHORT buf,ULONG bufcount,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqFindCheckVersion(LPUSHORT pRecord,USHORT version);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindInit(LPUSHORT seqbuf,ULONG seqbufsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindMore1553(LPSEQRECORDMORE1553 *pRecMore,LPSEQRECORD1553 pRecBase);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindMore1553Ex(LPSEQRECORDMORE1553 pRecMore,USHORT recordsize,LPSEQRECORD1553 pRecBase);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext(LPUSHORT *pRecord,LPUSHORT seqtype,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext1553(LPSEQRECORD1553 *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext1553Ex(LPSEQRECORD1553 pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext429(LPSEQRECORD429 *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext429Ex(LPSEQRECORD429 pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext708(LPSEQRECORD708 *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext708Ex(LPSEQRECORD708 pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext717(LPSEQRECORD717 *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNext717Ex(LPSEQRECORD717 pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextCSDB(LPSEQRECORDCSDB *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextCSDBEx(LPSEQRECORDCSDB pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextDIO(LPSEQRECORDDIO *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextDIOEx(LPSEQRECORDDIO pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextEBR(LPSEQRECORDEBR *pRecord,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextEBREx(LPSEQRECORDEBR pRecord,USHORT recordsize,LPSEQFINDINFO sfinfo);
BTICardAPI ERRVAL __stdcall BTICard_SeqFindNextEx(LPUSHORT pRecord,USHORT recordcount,LPUSHORT seqtype,LPSEQFINDINFO sfinfo);
BTICardAPI INT __stdcall BTICard_SeqInterval(INT interval,INT mode,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SeqIntervalEx(USHORT shiftval,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqIsRunning(HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SeqLogFrequency(USHORT logfreq,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SeqRd(LPUSHORT buf,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SeqRdEx(LPUSHORT buf,USHORT bufcount,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqResume(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqStart(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqStatus(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_SeqStop(HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_Shl(ULONG dataval,USHORT cntval);
BTICardAPI ULONG __stdcall BTICard_Shr(ULONG dataval,USHORT cntval);
BTICardAPI USHORT __stdcall BTICard_SignMant(LPCSTR str);
BTICardAPI VOID __stdcall BTICard_Sub64(LPULONG resulth,LPULONG resultl,ULONG valah,ULONG valal,ULONG valbh,ULONG valbl);