Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrsW(UInt16[] valueptr, UInt32 addrval, Int32 countval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_RAMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_RAMWrW(UInt16 value, UInt32 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ReverseLong@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_ReverseLong(UInt32 value);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ReverseWord@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_ReverseWord(UInt16 value);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqBlkRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_SeqBlkRd(UInt16[] buf, UInt32 bufcount, ref UInt32 blkcnt, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqBlkRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_SeqBlkRdEx(UInt16[] buf, UInt32 bufcount, UInt32 maxblkcnt, ref UInt32 blkcnt, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqCommRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SeqCommRd(UInt16[] buf, UInt16 bufcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqConfig@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqConfig(UInt32 configval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqConfigEx(UInt32 configval, UInt32 seqcount, UInt16 cardnum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqConfigExx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqConfigExx(UInt32 configval, UInt32 seqaddr, UInt32 seqcount, UInt16 cardnum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqDMARd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_SeqDMARd(UInt16[] buf, UInt32 bufcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindCheckVersion@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindCheckVersion(ref UInt16 precord, UInt16 version);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindInit(UInt16[] seqbuf, UInt32 seqbufsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindMore1553@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindMore1553(ref SEQRECORDMORE1553* precmore, ref SEQRECORD1553 precbase);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindMore1553Ex@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindMore1553Ex(ref SEQRECORDMORE1553 precmore, UInt16 recordsize, ref SEQRECORD1553 precbase);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNext(ref UInt16* precord, ref UInt16 seqtype, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext1553@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNext1553(ref SEQRECORD1553* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext1553Ex@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNext1553Ex(ref SEQRECORD1553 precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext429@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNext429(ref SEQRECORD429* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext429Ex@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNext429Ex(ref SEQRECORD429 precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext708@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNext708(ref SEQRECORD708* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext708Ex@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNext708Ex(ref SEQRECORD708 precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext717@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNext717(ref SEQRECORD717* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNext717Ex@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNext717Ex(ref SEQRECORD717 precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextCSDB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNextCSDB(ref SEQRECORDCSDB* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextCSDBEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNextCSDBEx(ref SEQRECORDCSDB precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextDIO@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNextDIO(ref SEQRECORDDIO* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextDIOEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNextDIOEx(ref SEQRECORDDIO precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextEBR@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SeqFindNextEBR(ref SEQRECORDEBR* precord, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextEBREx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNextEBREx(ref SEQRECORDEBR precord, UInt16 recordsize, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqFindNextEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqFindNextEx(UInt16[] precord, UInt16 recordcount, ref UInt16 seqtype, ref SEQFINDINFO sfinfo);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqInterval@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqInterval(Int32 interval, Int32 mode, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqIntervalEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SeqIntervalEx(UInt16 shiftval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqIsRunning(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqLogFrequency@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SeqLogFrequency(UInt16 logfreq, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SeqRd(UInt16[] buf, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqRdEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SeqRdEx(UInt16[] buf, UInt16 bufcount, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqResume(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqStart(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqStatus(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SeqStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SeqStop(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Shl@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Shl(UInt32 dataval, UInt16 cntval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Shr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_Shr(UInt32 dataval, UInt16 cntval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SignMant@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SignMant(ref string str);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Sub64@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Sub64(ref UInt32 resulth, ref UInt32 resultl, UInt32 valah, UInt32 valal, UInt32 valbh, UInt32 valbl);
